MathLangParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:50:56 MathLang.g 2017-01-18 18:16:24

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  MathLang 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:50:56")]
[System.CLSCompliant(false)]
public partial class MathLangParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "UNKNOWN", "BEGIN", "END", "PROGRAM", "CHAR", "INTEGER", "BOOLEAN", "ARRAY", "OF", "CONST_DECL", "VAR_DECL", "FUNC_DECL", "PROC_DECL", "WRITE", "WRITELN", "READ", "READLN", "EXPR_LIST", "BLOCK", "DECL", "AND", "OR", "NOT", "PARAMS", "CALL", "IF", "THEN", "ELSE", "IFTHEN", "FOR", "TO", "DOWNTO", "DO", "FROM", "WHILE", "REPEAT", "UNTIL", "VOID", "INC", "DEC", "ABS", "DIV", "MOD", "TRUE", "FALSE", "WS", "SL_COMMENT", "ML_COMMENT", "NUMBER", "IDENT", "ADD", "SUB", "MUL", "DIVIS", "GE", "LE", "NEQUALS", "EQUALS", "GT", "LT", "ASSIGN", "'('", "')'", "'['", "']'", "','", "';'", "'..'", "':'", "'.'"
	};
	public const int EOF=-1;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int UNKNOWN=4;
	public const int BEGIN=5;
	public const int END=6;
	public const int PROGRAM=7;
	public const int CHAR=8;
	public const int INTEGER=9;
	public const int BOOLEAN=10;
	public const int ARRAY=11;
	public const int OF=12;
	public const int CONST_DECL=13;
	public const int VAR_DECL=14;
	public const int FUNC_DECL=15;
	public const int PROC_DECL=16;
	public const int WRITE=17;
	public const int WRITELN=18;
	public const int READ=19;
	public const int READLN=20;
	public const int EXPR_LIST=21;
	public const int BLOCK=22;
	public const int DECL=23;
	public const int AND=24;
	public const int OR=25;
	public const int NOT=26;
	public const int PARAMS=27;
	public const int CALL=28;
	public const int IF=29;
	public const int THEN=30;
	public const int ELSE=31;
	public const int IFTHEN=32;
	public const int FOR=33;
	public const int TO=34;
	public const int DOWNTO=35;
	public const int DO=36;
	public const int FROM=37;
	public const int WHILE=38;
	public const int REPEAT=39;
	public const int UNTIL=40;
	public const int VOID=41;
	public const int INC=42;
	public const int DEC=43;
	public const int ABS=44;
	public const int DIV=45;
	public const int MOD=46;
	public const int TRUE=47;
	public const int FALSE=48;
	public const int WS=49;
	public const int SL_COMMENT=50;
	public const int ML_COMMENT=51;
	public const int NUMBER=52;
	public const int IDENT=53;
	public const int ADD=54;
	public const int SUB=55;
	public const int MUL=56;
	public const int DIVIS=57;
	public const int GE=58;
	public const int LE=59;
	public const int NEQUALS=60;
	public const int EQUALS=61;
	public const int GT=62;
	public const int LT=63;
	public const int ASSIGN=64;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, true, false, true, false, false, false, false, true, false, false, 
				false, false, false, false, false, false, false, , , , 
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public MathLangParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public MathLangParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[99+1];

		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return MathLangParser.tokenNames; } }
	public override string GrammarFileName { get { return "MathLang.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class bools_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_bools();
	partial void Leave_bools();

	// $ANTLR start "bools"
	// MathLang.g:109:1: bools : ( TRUE | FALSE );
	[GrammarRule("bools")]
	private MathLangParser.bools_return bools()
	{
		Enter_bools();
		EnterRule("bools", 1);
		TraceIn("bools", 1);
		MathLangParser.bools_return retval = new MathLangParser.bools_return();
		retval.Start = (IToken)input.LT(1);
		int bools_StartIndex = input.Index;
		object root_0 = null;

		IToken set1=null;

		object set1_tree=null;

		try { DebugEnterRule(GrammarFileName, "bools");
		DebugLocation(109, 0);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return retval; }
			// MathLang.g:109:7: ( TRUE | FALSE )
			DebugEnterAlt(1);
			// MathLang.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(109, 7);
			set1=(IToken)input.LT(1);
			if ((input.LA(1)>=TRUE && input.LA(1)<=FALSE))
			{
				input.Consume();
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, (object)adaptor.Create(set1));
				state.errorRecovery=false;state.failed=false;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("bools", 1);
			LeaveRule("bools", 1);
			Leave_bools();
			if (state.backtracking > 0) { Memoize(input, 1, bools_StartIndex); }
		}
		DebugLocation(110, 0);
		} finally { DebugExitRule(GrammarFileName, "bools"); }
		return retval;

	}
	// $ANTLR end "bools"

	public class group_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_group();
	partial void Leave_group();

	// $ANTLR start "group"
	// MathLang.g:126:1: group : ( '(' term ')' | NUMBER | IDENT | arrayId | bools );
	[GrammarRule("group")]
	private MathLangParser.group_return group()
	{
		Enter_group();
		EnterRule("group", 2);
		TraceIn("group", 2);
		MathLangParser.group_return retval = new MathLangParser.group_return();
		retval.Start = (IToken)input.LT(1);
		int group_StartIndex = input.Index;
		object root_0 = null;

		IToken char_literal2=null;
		IToken char_literal4=null;
		IToken NUMBER5=null;
		IToken IDENT6=null;
		MathLangParser.term_return term3 = default(MathLangParser.term_return);
		MathLangParser.arrayId_return arrayId7 = default(MathLangParser.arrayId_return);
		MathLangParser.bools_return bools8 = default(MathLangParser.bools_return);

		object char_literal2_tree=null;
		object char_literal4_tree=null;
		object NUMBER5_tree=null;
		object IDENT6_tree=null;

		try { DebugEnterRule(GrammarFileName, "group");
		DebugLocation(126, 0);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }
			// MathLang.g:126:6: ( '(' term ')' | NUMBER | IDENT | arrayId | bools )
			int alt1=5;
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			switch (input.LA(1))
			{
			case 65:
				{
				alt1=1;
				}
				break;
			case NUMBER:
				{
				alt1=2;
				}
				break;
			case IDENT:
				{
				int LA1_3 = input.LA(2);

				if ((LA1_3==67))
				{
					alt1=4;
				}
				else if ((LA1_3==EOF||(LA1_3>=AND && LA1_3<=OR)||LA1_3==THEN||LA1_3==DO||LA1_3==UNTIL||(LA1_3>=DIV && LA1_3<=MOD)||(LA1_3>=ADD && LA1_3<=LT)||LA1_3==66||LA1_3==68||LA1_3==70))
				{
					alt1=3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 3, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case TRUE:
			case FALSE:
				{
				alt1=5;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 0, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:127:3: '(' term ')'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(127, 6);
				char_literal2=(IToken)Match(input,65,Follow._65_in_group1036); if (state.failed) return retval;
				DebugLocation(127, 8);
				PushFollow(Follow._term_in_group1039);
				term3=term();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term3.Tree);
				DebugLocation(127, 16);
				char_literal4=(IToken)Match(input,66,Follow._66_in_group1041); if (state.failed) return retval;

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:128:3: NUMBER
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(128, 3);
				NUMBER5=(IToken)Match(input,NUMBER,Follow._NUMBER_in_group1046); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				NUMBER5_tree = (object)adaptor.Create(NUMBER5);
				adaptor.AddChild(root_0, NUMBER5_tree);
				}

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// MathLang.g:129:3: IDENT
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(129, 3);
				IDENT6=(IToken)Match(input,IDENT,Follow._IDENT_in_group1050); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				IDENT6_tree = (object)adaptor.Create(IDENT6);
				adaptor.AddChild(root_0, IDENT6_tree);
				}

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// MathLang.g:130:3: arrayId
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(130, 3);
				PushFollow(Follow._arrayId_in_group1054);
				arrayId7=arrayId();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, arrayId7.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// MathLang.g:131:3: bools
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(131, 3);
				PushFollow(Follow._bools_in_group1058);
				bools8=bools();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, bools8.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("group", 2);
			LeaveRule("group", 2);
			Leave_group();
			if (state.backtracking > 0) { Memoize(input, 2, group_StartIndex); }
		}
		DebugLocation(132, 0);
		} finally { DebugExitRule(GrammarFileName, "group"); }
		return retval;

	}
	// $ANTLR end "group"

	public class arrayId_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_arrayId();
	partial void Leave_arrayId();

	// $ANTLR start "arrayId"
	// MathLang.g:135:1: arrayId : IDENT '[' term ']' -> ^( IDENT term ) ;
	[GrammarRule("arrayId")]
	private MathLangParser.arrayId_return arrayId()
	{
		Enter_arrayId();
		EnterRule("arrayId", 3);
		TraceIn("arrayId", 3);
		MathLangParser.arrayId_return retval = new MathLangParser.arrayId_return();
		retval.Start = (IToken)input.LT(1);
		int arrayId_StartIndex = input.Index;
		object root_0 = null;

		IToken IDENT9=null;
		IToken char_literal10=null;
		IToken char_literal12=null;
		MathLangParser.term_return term11 = default(MathLangParser.term_return);

		object IDENT9_tree=null;
		object char_literal10_tree=null;
		object char_literal12_tree=null;
		RewriteRuleITokenStream stream_67=new RewriteRuleITokenStream(adaptor,"token 67");
		RewriteRuleITokenStream stream_IDENT=new RewriteRuleITokenStream(adaptor,"token IDENT");
		RewriteRuleITokenStream stream_68=new RewriteRuleITokenStream(adaptor,"token 68");
		RewriteRuleSubtreeStream stream_term=new RewriteRuleSubtreeStream(adaptor,"rule term");
		try { DebugEnterRule(GrammarFileName, "arrayId");
		DebugLocation(135, 47);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return retval; }
			// MathLang.g:135:8: ( IDENT '[' term ']' -> ^( IDENT term ) )
			DebugEnterAlt(1);
			// MathLang.g:135:10: IDENT '[' term ']'
			{
			DebugLocation(135, 10);
			IDENT9=(IToken)Match(input,IDENT,Follow._IDENT_in_arrayId1067); if (state.failed) return retval; 
			if ( state.backtracking == 0 ) stream_IDENT.Add(IDENT9);

			DebugLocation(135, 16);
			char_literal10=(IToken)Match(input,67,Follow._67_in_arrayId1069); if (state.failed) return retval; 
			if ( state.backtracking == 0 ) stream_67.Add(char_literal10);

			DebugLocation(135, 19);
			PushFollow(Follow._term_in_arrayId1070);
			term11=term();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) stream_term.Add(term11.Tree);
			DebugLocation(135, 23);
			char_literal12=(IToken)Match(input,68,Follow._68_in_arrayId1071); if (state.failed) return retval; 
			if ( state.backtracking == 0 ) stream_68.Add(char_literal12);



			{
			// AST REWRITE
			// elements: IDENT, term
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking == 0 ) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 135:27: -> ^( IDENT term )
			{
				DebugLocation(135, 31);
				// MathLang.g:135:31: ^( IDENT term )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(135, 34);
				root_1 = (object)adaptor.BecomeRoot(stream_IDENT.NextNode(), root_1);

				DebugLocation(135, 40);
				adaptor.AddChild(root_1, stream_term.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("arrayId", 3);
			LeaveRule("arrayId", 3);
			Leave_arrayId();
			if (state.backtracking > 0) { Memoize(input, 3, arrayId_StartIndex); }
		}
		DebugLocation(135, 47);
		} finally { DebugExitRule(GrammarFileName, "arrayId"); }
		return retval;

	}
	// $ANTLR end "arrayId"

	public class character_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_character();
	partial void Leave_character();

	// $ANTLR start "character"
	// MathLang.g:137:1: character : ( NUMBER | IDENT | arrayId );
	[GrammarRule("character")]
	private MathLangParser.character_return character()
	{
		Enter_character();
		EnterRule("character", 4);
		TraceIn("character", 4);
		MathLangParser.character_return retval = new MathLangParser.character_return();
		retval.Start = (IToken)input.LT(1);
		int character_StartIndex = input.Index;
		object root_0 = null;

		IToken NUMBER13=null;
		IToken IDENT14=null;
		MathLangParser.arrayId_return arrayId15 = default(MathLangParser.arrayId_return);

		object NUMBER13_tree=null;
		object IDENT14_tree=null;

		try { DebugEnterRule(GrammarFileName, "character");
		DebugLocation(137, 0);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 4)) { return retval; }
			// MathLang.g:137:10: ( NUMBER | IDENT | arrayId )
			int alt2=3;
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			int LA2_0 = input.LA(1);

			if ((LA2_0==NUMBER))
			{
				alt2=1;
			}
			else if ((LA2_0==IDENT))
			{
				int LA2_2 = input.LA(2);

				if ((LA2_2==67))
				{
					alt2=3;
				}
				else if ((LA2_2==EOF||LA2_2==TO||LA2_2==66||(LA2_2>=68 && LA2_2<=69)||LA2_2==71))
				{
					alt2=2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 2, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input);

				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:138:2: NUMBER
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(138, 2);
				NUMBER13=(IToken)Match(input,NUMBER,Follow._NUMBER_in_character1092); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				NUMBER13_tree = (object)adaptor.Create(NUMBER13);
				adaptor.AddChild(root_0, NUMBER13_tree);
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:139:3: IDENT
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(139, 3);
				IDENT14=(IToken)Match(input,IDENT,Follow._IDENT_in_character1096); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				IDENT14_tree = (object)adaptor.Create(IDENT14);
				adaptor.AddChild(root_0, IDENT14_tree);
				}

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// MathLang.g:140:3: arrayId
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(140, 3);
				PushFollow(Follow._arrayId_in_character1100);
				arrayId15=arrayId();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, arrayId15.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("character", 4);
			LeaveRule("character", 4);
			Leave_character();
			if (state.backtracking > 0) { Memoize(input, 4, character_StartIndex); }
		}
		DebugLocation(141, 0);
		} finally { DebugExitRule(GrammarFileName, "character"); }
		return retval;

	}
	// $ANTLR end "character"

	public class not_logic_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_not_logic();
	partial void Leave_not_logic();

	// $ANTLR start "not_logic"
	// MathLang.g:143:1: not_logic : ( NOT )? group ;
	[GrammarRule("not_logic")]
	private MathLangParser.not_logic_return not_logic()
	{
		Enter_not_logic();
		EnterRule("not_logic", 5);
		TraceIn("not_logic", 5);
		MathLangParser.not_logic_return retval = new MathLangParser.not_logic_return();
		retval.Start = (IToken)input.LT(1);
		int not_logic_StartIndex = input.Index;
		object root_0 = null;

		IToken NOT16=null;
		MathLangParser.group_return group17 = default(MathLangParser.group_return);

		object NOT16_tree=null;

		try { DebugEnterRule(GrammarFileName, "not_logic");
		DebugLocation(143, 27);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 5)) { return retval; }
			// MathLang.g:143:10: ( ( NOT )? group )
			DebugEnterAlt(1);
			// MathLang.g:143:12: ( NOT )? group
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(143, 12);
			// MathLang.g:143:12: ( NOT )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, decisionCanBacktrack[3]);
			int LA3_0 = input.LA(1);

			if ((LA3_0==NOT))
			{
				alt3=1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:143:14: NOT
				{
				DebugLocation(143, 17);
				NOT16=(IToken)Match(input,NOT,Follow._NOT_in_not_logic1110); if (state.failed) return retval;
				if ( state.backtracking == 0 ) {
				NOT16_tree = (object)adaptor.Create(NOT16);
				root_0 = (object)adaptor.BecomeRoot(NOT16_tree, root_0);
				}

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(143, 22);
			PushFollow(Follow._group_in_not_logic1116);
			group17=group();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group17.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("not_logic", 5);
			LeaveRule("not_logic", 5);
			Leave_not_logic();
			if (state.backtracking > 0) { Memoize(input, 5, not_logic_StartIndex); }
		}
		DebugLocation(143, 27);
		} finally { DebugExitRule(GrammarFileName, "not_logic"); }
		return retval;

	}
	// $ANTLR end "not_logic"

	public class mult_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_mult();
	partial void Leave_mult();

	// $ANTLR start "mult"
	// MathLang.g:145:1: mult : not_logic ( ( MUL | DIVIS | MOD | DIV ) not_logic )* ;
	[GrammarRule("mult")]
	private MathLangParser.mult_return mult()
	{
		Enter_mult();
		EnterRule("mult", 6);
		TraceIn("mult", 6);
		MathLangParser.mult_return retval = new MathLangParser.mult_return();
		retval.Start = (IToken)input.LT(1);
		int mult_StartIndex = input.Index;
		object root_0 = null;

		IToken set19=null;
		MathLangParser.not_logic_return not_logic18 = default(MathLangParser.not_logic_return);
		MathLangParser.not_logic_return not_logic20 = default(MathLangParser.not_logic_return);

		object set19_tree=null;

		try { DebugEnterRule(GrammarFileName, "mult");
		DebugLocation(145, 62);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 6)) { return retval; }
			// MathLang.g:145:5: ( not_logic ( ( MUL | DIVIS | MOD | DIV ) not_logic )* )
			DebugEnterAlt(1);
			// MathLang.g:145:8: not_logic ( ( MUL | DIVIS | MOD | DIV ) not_logic )*
			{
			root_0 = (object)adaptor.Nil();
